--- a/myCodes/fetch-api/fetch-01/index-2.html
+++ b/myCodes/fetch-api/fetch-01/index-2.html
@@ -62,8 +62,8 @@
 
             // --- take the data with fetch api ---
 
-            // if we use then, it waits until data comes otherwise data comes later 
-            // we get jsonveri as a returne data
+            // if we use then method, it waits until data comes otherwise data comes later
+
             getData().then(data => {
 
                 // get the length of kisiler array in data object
